--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <label for="year">Kredit müddətini <span id="yearCount">1</span> il</label>
       <input style="padding: 0;" id="year" type="range" min="1" max="25" step="1" value="1">
       
-      <p>Faiz: <span id="percentCount">0%</span></p>
+      <p>Faiz: <span id="percentCount" style="font-weight: 600; font-size: 1.2em;">0</span>%</p>
     </div>
     <div>
       <label for="totalAmount">Ümumi geri alınacaq məbləğ:</label>
